--- a/pom.xml
+++ b/pom.xml
@@ -242,7 +242,7 @@
         <maven-jasmine-plugin.version>1.3.1.5</maven-jasmine-plugin.version>
         <maven-plugin-api.version>3.2.2</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.3</maven-plugin-annotations.version>
-        <nemesis.version>1.5.3.RELEASE</nemesis.version>
+        <nemesis.version>1.5.4.BUILD-SNAPSHOT</nemesis.version>
         <opencmis.version>1.0.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
         <openpdf.version>1.0.2</openpdf.version>
