--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,8 @@
         <url>https://github.com/nemesis-software/nemesis-bom/issues</url>
     </issueManagement>
     <ciManagement>
-        <system>CircleCI</system>
-        <url>https://circleci.com/gh/nemesis-software/</url>
+        <system>Jenkins</system>
+        <url>http://jenkins.nemesis.io/jenkins/</url>
         <notifiers>
             <notifier>
                 <type>mail</type>
@@ -2156,18 +2156,11 @@
                         <reports>
                             <report>index</report>
                             <report>summary</report>
-                            <report>dependency-info</report>
                             <report>modules</report>
-                            <report>project-team</report>
                             <report>scm</report>
                             <report>issue-tracking</report>
                             <report>mailing-list</report>
-                            <report>dependency-management</report>
-                            <report>dependencies</report>
-                            <report>dependency-convergence</report>
                             <report>cim</report>
-                            <report>plugin-management</report>
-                            <report>plugins</report>
                             <report>distribution-management</report>
                         </reports>
                     </reportSet>
