Add hazelcast quartz dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,7 @@
         <gridgain.version>6.6.9</gridgain.version>
         <guava.version>23.0</guava.version>
         <handlebars-webjars.version>4.0.2</handlebars-webjars.version>
+        <hazelcast-quartz.version>1.0.4</hazelcast-quartz.version>
         <hibernate.version>5.2.13.Final</hibernate.version>
         <hibernate.ogm.version>5.1.0.Final</hibernate.ogm.version>
         <hibernate-hydrate.version>5.2.0</hibernate-hydrate.version>
@@ -981,6 +982,11 @@
                 <groupId>net.joelinn</groupId>
                 <artifactId>quartz-redis-jobstore</artifactId>
                 <version>${redis-quartz.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.bikeemotion</groupId>
+                <artifactId>quartz-hazelcast-jobstore</artifactId>
+                <version>${hazelcast-quartz.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars</groupId>
