--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,7 @@
         <jstree-bootstrap-theme.version>1.0.1</jstree-bootstrap-theme.version>
         <jedis.version>2.9.0</jedis.version>
         <license-maven-plugin>1.13</license-maven-plugin>
+        <!--kie.version>7.8.0-SNAPSHOT</kie.version-->
         <kie.version>7.7.0.Final</kie.version>
         <magicsuggest-webjars.version>2.1.4</magicsuggest-webjars.version>
         <materializecss-webjars.version>0.98.1</materializecss-webjars.version>
@@ -259,6 +260,7 @@
         <maven-tomcat7.plugin>2.2</maven-tomcat7.plugin>
         <maven-build-helper-plugin.version>1.8</maven-build-helper-plugin.version>
         <maven-plexus-plugin.version>1.5.5</maven-plexus-plugin.version>
+        <maven-pdf-plugin.version>1.4</maven-pdf-plugin.version>
         <maven-jasmine-plugin.version>1.3.1.5</maven-jasmine-plugin.version>
         <maven-plugin-api.version>3.5.0</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.5</maven-plugin-annotations.version>
@@ -311,8 +313,8 @@
         <spring-restdocs.version>1.1.2.RELEASE</spring-restdocs.version>
         <!--spring-security.version>5.0.2.BUILD-20180214.212521-49</spring-security.version-->
         <!--spring.cloud.version>Camden.SR3</spring.cloud.version-->
-        <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version>
-        <spring-data-releasetrain.version>Ingalls-BUILD-SNAPSHOT</spring-data-releasetrain.version-->
+        <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
+        <!--spring-data-releasetrain.version>Kay-BUILD-SNAPSHOT</spring-data-releasetrain.version-->
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social.version>2.0.0.BUILD-SNAPSHOT</spring-social.version>
         <spring-social-twitter.version>2.0.0.BUILD-SNAPSHOT</spring-social-twitter.version>
@@ -2395,11 +2397,27 @@
                     </licenseFamilies>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pdf-plugin</artifactId>
+                <version>${maven-pdf-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctor-maven-plugin</artifactId>
+                        <version>${asciidoctor.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-diagram</artifactId>
+                        <version>${asciidoctorj-diagram.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
             <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jarsigner-plugin</artifactId>
             </plugin-->
-
         </plugins>
     </build>
 
