--- a/pom.xml
+++ b/pom.xml
@@ -313,13 +313,13 @@
         <spotbugs.version>3.1.2</spotbugs.version>
         <spotbugs.omitvisitors>SerializableIdiom</spotbugs.omitvisitors>
         <stacktable-webjars.version>1.0.1</stacktable-webjars.version>
-        <spring.version>5.1.0.BUILD-SNAPSHOT</spring.version>
+        <!--spring.version>5.1.0.BUILD-SNAPSHOT</spring.version-->
         <spring-mobile.version>2.0.0.M2</spring-mobile.version>
         <spring-restdocs.version>1.1.2.RELEASE</spring-restdocs.version>
         <!--spring-security.version>5.0.2.BUILD-20180214.212521-49</spring-security.version-->
         <spring-cloud.version>Finchley.RC1</spring-cloud.version>
         <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
-        <spring-data-releasetrain.version>Kay-BUILD-SNAPSHOT</spring-data-releasetrain.version>
+        <!--spring-data-releasetrain.version>Kay-BUILD-SNAPSHOT</spring-data-releasetrain.version-->
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social.version>2.0.0.BUILD-SNAPSHOT</spring-social.version>
         <spring-social-twitter.version>2.0.0.BUILD-SNAPSHOT</spring-social-twitter.version>
@@ -2349,6 +2349,8 @@
                                 <exclude>commons-logging:commons-logging</exclude>
                                 <exclude>com.mchange:*</exclude>
                                 <exclude>c3p0:*</exclude>
+                                <!-- Waiting on https://github.com/aws/aws-sdk-java/issues/1580 and https://jira.spring.io/browse/DATAES-290--> 
+                                <!--exclude>joda-time:*</exclude--> 
                                 <!--exclude>com.google.guava:guava</exclude-->
                                 <!--exclude>com.google.code.gson:gson</exclude-->
                                 <!-- Waiting on: https://issues.jboss.org/browse/JBPM-6850 -->
