--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,20 @@
   ~ Information and shall use it only in accordance with the terms of the
   ~ license agreement you entered into with nemesis.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
-        <relativePath />
+        <version>2.1.0.BUILD-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <groupId>com.nemesis</groupId>
     <artifactId>bom</artifactId>
-    <version>2.0.1.BUILD-SNAPSHOT</version>
+    <version>2.0.0.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Nemesis BOM</name>
@@ -143,14 +144,14 @@
         <cxf-xjc-plugin.version>3.2.1</cxf-xjc-plugin.version>
         <cxf-codegen-plugin.version>3.2.2</cxf-codegen-plugin.version>
         <cxf.codegenplugin.forkmode>once</cxf.codegenplugin.forkmode>
-        <cxf.xjc.jvmArgs />
+        <cxf.xjc.jvmArgs/>
         <docker-maven-plugin.version>1.0.0</docker-maven-plugin.version>
         <doxia.version>1.7</doxia.version>
         <ehcache-jcache.version>1.0.1</ehcache-jcache.version>
         <elasticsearch-head-webjars.version>5.0.0</elasticsearch-head-webjars.version>
         <extjs-webjars.version>5.1.1-light</extjs-webjars.version>
-        <failsafe.parallel />
-        <failsafe.useUnlimitedThreads />
+        <failsafe.parallel/>
+        <failsafe.useUnlimitedThreads/>
         <fontawesome-webjars.version>4.6.3</fontawesome-webjars.version>
         <flying-saucer.version>9.1.12</flying-saucer.version>
         <guava.version>20.0</guava.version>
@@ -229,7 +230,6 @@
         <materializecss-webjars.version>0.98.1</materializecss-webjars.version>
         <maven-archetype-plugin.version>3.0.1</maven-archetype-plugin.version>
         <maven-filtering.version>3.1.1</maven-filtering.version>
-        <nemesis.version>2.0.0.RELEASE</nemesis.version>
         <maven-artifact-manager.version>2.2.1</maven-artifact-manager.version>
         <maven-war-plugin.version>3.1.0</maven-war-plugin.version>
         <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
@@ -315,7 +315,6 @@
         <stacktable-webjars.version>1.0.1</stacktable-webjars.version>
         <!--spring.version>5.1.0.BUILD-SNAPSHOT</spring.version-->
         <spring-mobile.version>2.0.0.M2</spring-mobile.version>
-        <spring-restdocs.version>1.1.2.RELEASE</spring-restdocs.version>
         <!--spring-security.version>5.0.2.BUILD-20180214.212521-49</spring-security.version-->
         <spring-cloud.version>Finchley.RC1</spring-cloud.version>
         <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
@@ -324,7 +323,6 @@
         <spring-social.version>2.0.0.BUILD-SNAPSHOT</spring-social.version>
         <spring-social-twitter.version>2.0.0.BUILD-SNAPSHOT</spring-social-twitter.version>
         <spring-social-facebook.version>3.0.0.BUILD-SNAPSHOT</spring-social-facebook.version>
-        <spring-restdocs.version>1.2.0.BUILD-SNAPSHOT</spring-restdocs.version>
         <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <supercsv.version>2.4.0</supercsv.version>
         <stripe-api.version>5.35.1</stripe-api.version>
@@ -1371,14 +1369,14 @@
                 <version>${javauom-systems.version}</version>
             </dependency>
             <dependency>
-	            <groupId>systems.uom</groupId>
-	            <artifactId>systems-unicode-java8</artifactId>
-	            <version>${javauom-systems.version}</version>
+                <groupId>systems.uom</groupId>
+                <artifactId>systems-unicode-java8</artifactId>
+                <version>${javauom-systems.version}</version>
             </dependency>
             <dependency>
-	            <groupId>systems.uom</groupId>
-	            <artifactId>systems-quantity</artifactId>
-	            <version>${javauom-systems.version}</version>
+                <groupId>systems.uom</groupId>
+                <artifactId>systems-quantity</artifactId>
+                <version>${javauom-systems.version}</version>
             </dependency>
             <dependency>
                 <groupId>si.uom</groupId>
@@ -2352,8 +2350,8 @@
                                 <exclude>commons-logging:commons-logging</exclude>
                                 <exclude>com.mchange:*</exclude>
                                 <exclude>c3p0:*</exclude>
-                                <!-- Waiting on https://github.com/aws/aws-sdk-java/issues/1580 and https://jira.spring.io/browse/DATAES-290--> 
-                                <!--exclude>joda-time:*</exclude--> 
+                                <!-- Waiting on https://github.com/aws/aws-sdk-java/issues/1580 and https://jira.spring.io/browse/DATAES-290-->
+                                <!--exclude>joda-time:*</exclude-->
                                 <!--exclude>com.google.guava:guava</exclude-->
                                 <!--exclude>com.google.code.gson:gson</exclude-->
                                 <!-- Waiting on: https://issues.jboss.org/browse/JBPM-6850 -->
@@ -2413,7 +2411,7 @@
                         <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
                             <licenseFamilyCategory>AL2</licenseFamilyCategory>
                             <licenseFamilyName>Apache License 2.0</licenseFamilyName>
-                            <notes />
+                            <notes/>
                             <patterns>
                                 <pattern>Licensed to the Apache Software Foundation (ASF) under one</pattern>
                             </patterns>
@@ -2421,7 +2419,7 @@
                         <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
                             <licenseFamilyCategory>NSCL</licenseFamilyCategory>
                             <licenseFamilyName>Nemesis Software Commercial License 1.0</licenseFamilyName>
-                            <notes />
+                            <notes/>
                             <patterns>
                                 <pattern>nemesis Platform - NExt-generation Multichannel E-commerce SYStem</pattern>
                             </patterns>
