--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.BUILD-SNAPSHOT</version>
+        <version>2.0.2.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -320,9 +320,9 @@
         <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
         <!--spring-data-releasetrain.version>Kay-BUILD-SNAPSHOT</spring-data-releasetrain.version-->
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
-        <spring-social.version>2.0.0.BUILD-SNAPSHOT</spring-social.version>
-        <spring-social-twitter.version>2.0.0.BUILD-SNAPSHOT</spring-social-twitter.version>
-        <spring-social-facebook.version>3.0.0.BUILD-SNAPSHOT</spring-social-facebook.version>
+        <spring-social.version>2.0.0.NEMESIS-RELEASE</spring-social.version>
+        <spring-social-twitter.version>2.0.2.NEMESIS-RELEASE</spring-social-twitter.version>
+        <spring-social-facebook.version>3.0.0.NEMESIS-RELEASE</spring-social-facebook.version>
         <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <supercsv.version>2.4.0</supercsv.version>
         <stripe-api.version>5.35.1</stripe-api.version>
