--- a/pom.xml
+++ b/pom.xml
@@ -269,7 +269,7 @@
         <maven-plugin-api.version>3.5.0</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.5</maven-plugin-annotations.version>
         <money-validation.version>2.0.0</money-validation.version>
-        <nemesis.version>2.0.0.BUILD-SNAPSHOT</nemesis.version>
+        <nemesis.version>2.0.0.RELEASE</nemesis.version>
         <opencmis.version>1.1.0</opencmis.version>
         <olingo-odata2.version>2.0.9</olingo-odata2.version>
         <olingo-odata4.version>4.4.0</olingo-odata4.version>
