--- a/pom.xml
+++ b/pom.xml
@@ -1740,6 +1740,11 @@
             </dependency>
             <dependency>
                 <groupId>com.nemesis.platform.module.widget</groupId>
+                <artifactId>nemesis-widget-facet</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform.module.widget</groupId>
                 <artifactId>nemesis-widget-faq</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
